# OnlineFencingPoolSheet

./: Cargo.toml  README.md  index.html  scratch.txt
.github/workflows/: gh-pages-deploy.yml
public/: styles.css
src/: lib.rs  main.rs  pool_sheet_utils.rs
src/components/: mod.rs
src/components/fencer_list/: mod.rs
src/components/pool_sheet/: bout_list.rs  mod.rs  sheet_table.rs
src/components/result_sheet/: mod.rs
src/pages/: home.rs
