[package]
name = "fencing-pool-sheet-leptos"
version = "0.1.0"
edition = "2021"
authors = ["Erik Fong <quantumerikfong@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "=0.1.2"
log = "0.4"
console_error_panic_hook = "0.1"
web-sys = "0.3.69"
serde = "1.0.197"
serde_json = "1.0.115"
fencing-sport-lib = { git = "https://github.com/UAHFencingClub/fencing-sport-lib.git" }
itertools = "0.13.0"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
